fixes #5 - Added a full page dark background behind modal.

--- a/css/kept.css
+++ b/css/kept.css
@@ -34,12 +34,25 @@ body {
   .kept-panel header {
     cursor: move;
   }
+    .kept-modal .kept-panel header {
+      cursor: default;
+    }
 
 .targetted {
   border: 1px dashed #333;
 }
 
 /* TODO: responsive adjustment of number of columns */
+
+.kept-modal-bg {
+  position: absolute;
+  z-index: 998;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .65);
+}
 
 /**
  * Inspired by http://cameronbaney.com/2012/07/26/pure-html5css3-responsive-modal-window/
